<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">小米智能管家</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Start">Start</string>
    <string name="Stop">Stop</string>
    <string name="Refresh">Refresh</string>
    <string name="title_activity_smartsocket">SmartsocketActivity</string>
    <string name="title_activity_devicemanager">DeviceManagerActivity</string>
    <string name="title_activity_unknowndevice">UnknowndeviceActivity</string>
    <string name="title_activity_universaldevice">通用设备界面</string>
    <string name="device_manager">device_Manager</string>
    <string name="account_manager">account_Manager</string>
    <string name="Test">Test</string>
    <string name="Bind">Bind</string>
    <string name="Unbind">Unbind</string>
    <string name="Login">Login</string>
    <string name="Logout">Logout</string>
    <string name="OpenMiot">OpenMiot</string>
    <string name="CloseMiot">CloseMiot</string>

    <string name="GetAccount">GetAccount</string>
    <string name="GetAuthToken">GetAuthToken</string>
    <string name="GetTimeDiff">GetTimeDiff</string>

    <string name="manager">"manager device"</string>
    <string name="invoke_actions">invoke actions</string>
    <string name="ConfigurateConnection">ConfigurateConnection</string>
    <string name="PlayAudio">PlayAudio</string>
    <string name="Pause">Pause</string>
    <string name="Play">Play</string>
    <string name="SetProgress">SetProgress</string>
    <string name="GetProgress">GetProgress</string>

    <string name="GetProperties">读取所有属性</string>
    <string name="Subscribe">订阅</string>
    <string name="Unsubscribe">取消订阅</string>
    <string name="SubEvent">订阅事件</string>
    <string name="UnsubEvent">取消订阅事件</string>
    <string name="TakeOwnership">TakeOwnership</string>
    <string name="DisclaimOwnership">DisclaimOwnership</string>

    <string name="SetPlug">SetPlug</string>
    <string name="SetPlugOn">SetPlugOn</string>
    <string name="SetPlugOff">SetPlugOff</string>
    <string name="SetUsbPlug">SetUsbPlug</string>
    <string name="SetUsbPlugOn">setUsbOn</string>
    <string name="SetUsbPlugOff">setUsbOff</string>

    <string name="ResetFilter">ResetFilter</string>
    <string name="SetAirAutoDetect">SetAirAutoDetect</string>
    <string name="SetBuzzer">SetBuzzer</string>
    <string name="SetFilterMaxLife">SetFilterMaxLife</string>
    <string name="SetLedBrightness">SetLedBrightness</string>
    <string name="SetLedStatus">SetLedStatus</string>
    <string name="SetMode">设置模式</string>

    <string name="ActionSubEvents">1. 订阅事件</string>
    <string name="ActionUnSubEvents">2. 取消订阅事件</string>
    <string name="ActionDebug">进入调试模式</string>
    <string name="ActionCleanLog">0. 清空日志</string>

    <string name="SetPower">开关</string>
    <string name="SetTemperature">设置温度</string>
    <string name="SetWindSpeed">设置风速</string>
    <string name="setWindDirectionOfVertical">设置垂直风向</string>
    <string name="setWindDirectionOfHorizontal">设置水平风向</string>
    <string name="setElecHeat">设置啥东东？</string>

    <string name="miot_account_login">帐号登录</string>
    <string name="miot_account_logout">注销</string>
    <string name="miot_account_logout_message">是否要注销当前登录？</string>
    <string name="miot_button_ok">确定</string>
    <string name="miot_button_cancel">取消</string>

    <string name="login_account_login_title">帐号登录</string>
    <string name="miio_setting_logout">注销</string>
    <string name="setting_logout">注销登录</string>
    <string name="setting_logout_message">是否要注销当前登录？</string>
    <string name="ok_button">确定</string>
    <string name="status_error_cable_not_plugin_body">请检查网络是否连接</string>
    <string name="login_dynamic_token_title">动态口令</string>
    <string name="login_verify_code_fail">请输入正确的验证码</string>
    <string name="login_dynamic_token_fail">动态口令错误</string>
    <string name="login_passport_login_fail">小米账号登录失败</string>
    <string name="unauthoried_tip">账户失效，请重新登录</string>
    <string name="login_time_out">登录超时，请稍候再试</string>
    <string name="login_passport_input_fail">小米账号或密码错误</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_new_user_register">新用户注册</string>
    <string name="login_passport_login_waiting">正在登录，请稍等...</string>
    <string name="login_system_login">直接登录</string>
    <string name="login_dynamic_token_hint">请输入6位动态口令</string>
    <string name="login_verify_code_hint">验证码</string>
    <string name="login_dynamic_token_trust">以后登录无需输入口令</string>
    <string name="login_change_account"><u>切换帐号</u></string>
    <string name="login_account_hint">邮箱/手机号码/小米帐号</string>
    <string name="login_account_login">登录</string>
    <string name="cancel">取消</string>

    <string name="m_s">MB/s</string>
    <string name="k_s">KB/s</string>

    <string name="AirAutoDetect">AirAutoDetect: ?</string>
    <string name="Brightness">Brightness ?</string>
    <string name="AirQualityIndex">AirQualityIndex ?</string>
    <string name="BuzzerStatus">BuzzerStatus ?</string>
    <string name="FilterLife">FilterLife ?</string>
    <string name="LedStatus">LedStatus ?</string>
    <string name="Mode">Mode ?</string>
    <string name="FilterMaxLife">FilterMaxLife ?</string>

    <string name="Management">设备管理</string>
    <string name="device_manipulate">设备操作（调用方法）</string>
    <string name="ServiceList">服务列表</string>
    <string name="PropertyList">属性列表</string>

    <string name="pull_down_refresh">下拉刷新</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="refreshing">载入中…</string>
    <string name="common_complete">完成</string>
    <string name="common_cancel">取消</string>
    <string name="common_retry">重试</string>
    <string name="common_next_step">下一步</string>

    <string name="login_password_hint">密码</string>

    <string name="bind_failed">bind service失败</string>
    <string name="bind_succeed">bind service成功</string>
    <string name="mi_account_login">MiAccountLogin</string>
    <string name="already_login">already login</string>
    <string name="mi_account_logout">MiAccountLogout</string>
    <string name="account_not_login">用户尚未登录</string>
    <string name="mi_device">小米智能设备</string>
    <string name="wan_device">广域网设备</string>
    <string name="wifi_device">未连接设备</string>
</resources>
