<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              tools:context="com.mi.activity.device.SmartsocketActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manager"/>

        <Button
            android:id="@+id/btn_bind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TakeOwnership"/>

        <Button
            android:id="@+id/btn_unbind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DisclaimOwnership"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invoke_actions"/>

        <Button
            android:id="@+id/btn_get_properties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GetProperties"
            />

        <Button
            android:id="@+id/btn_subscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Subscribe"/>

        <Button
            android:id="@+id/btn_unsubscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Unsubscribe"/>

        <Button
            android:id="@+id/btn_set_plug_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SetPlugOn"/>

        <Button
            android:id="@+id/btn_set_plug_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SetPlugOff"/>

        <Button
            android:id="@+id/btn_set_usb_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SetUsbPlugOn"/>

        <Button
            android:id="@+id/btn_set_usb_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SetUsbPlugOff"/>

        <TextView
            android:id="@+id/tv_power"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_usb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>
